Major changes to UI functionality and improved message transfer.
 * Make sharing and transfer work thourgh symlinks in a different folder.
   Avoids transfering messages that are not shared.

 * Improved share-button.

 * Add hide button and implement hiding and visibility status  in functions.

 * Change GetAddress to return IP-address not MAC.

 * Change remove .cgi from script name.

 * Get rid of 'settings' for now.

 * Add name field for post messages.

--- a/media/css/custom.css
+++ b/media/css/custom.css
@@ -46,8 +46,13 @@ textarea#post-text {
 	width: 510px;
 }
 
+input#sender-name { 
+        -moz-border-radius: 6px;
+	border-radius: 6px;
+}
+
 button#post-button {
-	bottom: 40px;
+	left: 270px;
 	position: relative;
 }
 
