Fix star-button background-color

--- a/smokeparrot-luci/luasrc/view/smokeparrot/style.htm
+++ b/smokeparrot-luci/luasrc/view/smokeparrot/style.htm
@@ -30,6 +30,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   div.own { background-color: #efefdd; }
   div.received { background-color: #efef99; }
   div.sp_star-form { float: left; }
+  input.sp_star-button { background-color: transparent; }
   /* poster */
   div#sp_post-form { width: 400px; }  
   textarea#sp_post-text { width: 400px; }
